implementação de interface

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@whiskeysockets/baileys": "^6.5.0",
     "cheerio": "^1.0.0-rc.12",
     "csv-parser": "^3.0.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "16.5.0",
+    "express": "5.1.0",
     "fs-extra": "^11.1.1",
     "jimp": "^0.16.13",
     "moment": "^2.29.4",
